--- a/assets/style.css
+++ b/assets/style.css
@@ -47,6 +47,7 @@ body {
   min-width: 100%;
   display: grid;
   grid-template-columns: 1fr 1fr;
+  /*grid-template-columns: repeat(2, 1fr); */
   align-items: center;
   justify-items: center;
   gap: 16px;
@@ -69,18 +70,20 @@ body {
   justify-content: center;
   /* center image inside the panel */
   width: 100%;
-  height: 100%;
+  height: 336px;
   background: #fafafa;
   padding: 22px;
   border-radius: 20px;
   box-sizing: border-box;
+  
 }
 
 .platform-carousel__slide-media img {
-  width: 145px;
+  /*width: 145px;
   max-width: 100%;
-  height: auto;
+  height: auto;*/
   display: block;
+  max-width: 100%;
 }
 
 /* Text Panel */
@@ -171,6 +174,7 @@ body {
 
   .platform-carousel__slide-media {
     padding: 10px;
+    height: 330px;
   }
 
   .platform-carousel__slide-body {
