--- a/cmp2/assets/style.css
+++ b/cmp2/assets/style.css
@@ -24,7 +24,7 @@ body {
   grid-template-columns: 1fr 1fr;
   align-items: center;
   justify-content: center;
-  column-gap: 0;
+  column-gap: 50px;
 
   background: linear-gradient(90deg,
       #171717 0%,
@@ -40,7 +40,8 @@ body {
   display: flex;
   flex-direction: column;
   gap: 24px;
-  padding-left:45px;
+  height: 100%;
+  justify-content: center;
 }
 
 .hero__title {
@@ -103,13 +104,15 @@ body {
 .hero__media {
   display: flex;
   justify-content: flex-end;
-  align-items: center;
+  width: 100%;
+  height: 100%;
+  max-height: 492px;
 }
 
 .hero__media img {
   display: block;
   max-width: 100%;
-  height: auto;
+  max-height: 100%;
 }
 
 /* =====================================
@@ -127,10 +130,12 @@ body {
   .hero {
     padding: 30px;
   }
-.hero__content {
+
+  .hero__content {
     padding: 0;
     gap: 16px;
   }
+
   .hero__title {
     font-size: 2rem;
   }
