--- a/cmp2/assets/style.css
+++ b/cmp2/assets/style.css
@@ -58,8 +58,14 @@ body {
 
 .hero__title {
   margin: 0;
-  font-size: 2.7rem;
-  line-height: 1.1;
+  /*font-size: 2.7rem;*/
+  font-family: 'Matter SQ', Arial, sans-serif;
+  font-weight: 700;
+
+  font-size: clamp(36px, 6vw, 45px);
+  line-height: clamp(40px, 6vw, 45px);
+
+  /*line-height: 1.1;  */
 }
 
 .hero__description {
@@ -76,11 +82,26 @@ body {
 /* Actions */
 .hero__actions {
   display: flex;
+  flex-wrap: wrap;
   gap: 16px;
   margin: 0;
 }
 
 .hero__button {
+  padding: 19px 38px;
+  border-radius: 999px;
+  font-size: 16px;
+  text-decoration: none;
+  text-align: center;
+  white-space: nowrap;
+  flex-shrink: 0;
+
+  border: 1px solid #fff;
+  color: #fff;
+  transition: background 0.2s ease, color 0.2s ease;
+}
+
+.hero__button_old {
   padding: 19px 38px;
   border-radius: 999px;
   font-size: 16px;
@@ -116,6 +137,7 @@ body {
 .hero__media {
   display: flex;
   justify-content: flex-end;
+  align-items: center;
   width: 100%;
   height: 100%;
   max-height: 492px;
@@ -130,11 +152,15 @@ body {
 /* =====================================
    Mobile Styles
 ===================================== */
+@media (max-width: 1024px) {
+  .hero__container {
+    padding: 32px 20px;
+  }
+}
 
 @media (max-width: 768px) {
   .hero__container {
     grid-template-columns: 1fr;
-    padding: 32px 20px;
     gap: 24px;
     text-align: center;
   }
@@ -149,7 +175,8 @@ body {
   }
 
   .hero__title {
-    font-size: 2rem;
+    /*font-size: 2rem;*/
+    /*font: 700 48px/48px 'MatterIGTF', sans-serif;*/
   }
 
   .hero__media {
@@ -160,4 +187,60 @@ body {
     flex-direction: column;
     align-items: center;
   }
+}
+
+
+/***** Recent edits *****/
+.hero--40-60 {
+  grid-template-columns: 4fr 6fr;
+}
+.hero--60-40 {
+  grid-template-columns: 6fr 4fr;
+}
+
+@media (max-width: 768px) {
+  .hero__container.hero--40-60, .hero__container.hero--60-40 {
+    grid-template-columns: 1fr;
+  }
+}
+
+
+.hero__list {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  text-align: left;
+}
+
+.hero__list li {
+  position: relative;
+  padding-left: 40px;
+  margin-bottom: 14px;
+  line-height: 1.4;
+}
+
+/* Circle */
+.hero__list li::before {
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 0.3em;
+
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  border: 2px solid #cd3434;
+}
+
+/* Tick */
+.hero__list li::after {
+  content: '';
+  position: absolute;
+  left: 8px;
+  top: 0.65em;
+  width: 4px;
+  height: 8px;
+  border-right: 2px solid #cd3434;
+  border-bottom: 2px solid #cd3434;
+  transform: rotate(45deg);
 }
